--- a/src/App.css
+++ b/src/App.css
@@ -330,7 +330,7 @@ ul {
   border: 0;
   box-sizing: border-box;
   margin-top: 43px;
-  height: 415px;
+  height: 100vh;
   overflow-y: scroll;
 }
 
@@ -347,7 +347,7 @@ ul {
   background-color: red;
   margin-right: 33px;
   position: relative;
-  filter: drop-shadow(0 0 0 0.35rem #000);
+  filter: drop-shadow(0 0 0 0.35rem rgba(0, 0, 0, 0.464));
 }
 
 .chat .img img {
@@ -391,4 +391,31 @@ ul {
   color: #5f35f5;
   display: flex;
   align-items: center;
+}
+.dark .chat .chatMsg {
+  color: #000;
+}
+
+.chat .chatMsg {
+  display: flex;
+  position: relative;
+  margin-top: 50px;
+}
+.chat .chatMsg p {
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  display: inline-block;
+  padding: 13px 52px;
+  border-radius: 10px;
+}
+
+.chat .chatMsg .date {
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.25);
+  position: absolute;
+  bottom: -40px;
+  left: -40px;
 }
