--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ ul {
   font-size: 35px;
   font-weight: 700;
   color: #11175d;
-  margin-top: 225px;
+  margin-top: 5rem;
 }
 
 .registration_part p {
@@ -109,7 +109,7 @@ ul {
   font-family: "Nunito", sans-serif;
   font-size: 20px;
   font-weight: 600;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .registration_part .msg {
