--- a/src/App.css
+++ b/src/App.css
@@ -153,12 +153,14 @@ ul {
 }
 
 .leftbar {
-  width: 186px;
-  height: 100vh;
+  /* width: 186px; */
+  height: 800px;
   background-color: #5f35f5;
-  margin: 35px 0 35px 35px;
+  margin: 35px 15px 15px 25px;
+  /* margin: 35px 0 0 15px; */
   border-radius: 20px;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
 .leftbar h4 {
@@ -176,8 +178,8 @@ ul {
   margin-top: 38px;
 }
 .leftbar li {
-  margin-top: 60px;
-  width: 90%;
+  margin-top: 20px;
+  /* width: 90%; */
   margin-left: auto;
   padding: 20px;
   cursor: pointer;
